--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ javafx {
 }
 
 dependencies {
-
+  implementation 'org.xerial:sqlite-jdbc:3.34.0'
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
