--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ tasks.withType(JavaCompile) {
 
 application {
   mainModule = 'com.example.codingweek21'
-  mainClass = 'com.example.codingweek21.HelloApplication'
+  mainClass = 'com.example.codingweek21.Main'
 }
 
 javafx {
@@ -53,4 +53,10 @@ jlink {
 
 jlinkZip {
   group = 'distribution'
+}
+
+jar {
+  manifest {
+    attributes 'Main-Class': application.mainClass
+  }
 }
