--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-  mainModule = 'com.example.codingweek21'
-  mainClass = 'com.example.codingweek21.Main'
+  mainModule = 'com.example.codingweek'
+  mainClass = 'com.example.codingweek.Main'
 }
 
 javafx {
