--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ javafx {
 }
 
 dependencies {
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
+  implementation 'com.fasterxml.jackson.core:jackson-core:2.12.4'
+  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.4'
+
   implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
