--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ javafx {
 }
 
 dependencies {
+  implementation 'commons-io:commons-io:2.11.0'
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
   implementation 'com.fasterxml.jackson.core:jackson-core:2.12.4'
   implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.4'
